# impermanent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: data-gh-archive.yaml  evaluate-gh-archive.yaml  forecast-gh-archive.yaml  leaderboard-gh-archive.yaml  lint.yaml
src/: cenace_pipeline.py  dataset_registry.py  pipeline.py
src/data/cenace/: config.py
src/data/cenace/aggregate/: core.py
src/data/cenace/extract/: core.py
src/data/cenace/utils/: cenace_data.py
src/data/gh_archive/aggregate/: core.py  modal_app.py
src/data/gh_archive/athena/: README.md
src/data/gh_archive/extract/: core.py  modal_app.py
src/data/gh_archive/transform/: core.py  modal_app.py
src/data/gh_archive/utils/: __init__.py  gh_archive_data.py  parquet_validator.py
src/evaluation/: __init__.py  evaluate.py
src/evaluation/cenace/: core.py  metrics.py
src/evaluation/gh_archive/: core.py  modal_app.py
src/forecast/: __init__.py  constants.py  forecast.py
src/forecast/cenace/: core.py  models.py
src/forecast/custom_models/: constant_models.py
src/forecast/gh_archive/: core.py  modal_app.py
tests/data/gh_archive/aggregate/: test_core.py
tests/data/gh_archive/extractor/: test_core.py
tests/data/gh_archive/transform/: test_core.py
tests/data/gh_archive/utils/: test_gh_archive_data.py  test_parquet_validator.py
